former-apps/edith/edith-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: edith
spec:
  type: ClusterIP
  selector:
    app: edith
  ports:
    - name: edith
      port: 3000
      targetPort: 80
